# Self-Evolving-Agents

./: README.md  gitignore.txt  self_evolving_agents.ipynb  start (2).sh  stop.sh
backend/: pyproject.toml
frontend/: index (4).html  package.json  tailwind.config.js
frontend/src/: ApiKeySetup.jsx  App (2).jsx  ArchitectureDiagram.jsx  Dashboard.jsx  EvolutionChart.jsx  Footer.jsx  TaskExecutor.jsx  index.css
